# genome-lm-interpretation

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: g4.yaml  promoter.yaml  zdna.yaml
docs/: EXPERIMENTS.md
notebooks/: README.md  hyenadna_zdna_experiments.ipynb
scripts/: interpret.py  train.py
src/: modeling_hyena.py
src/genome_lm_interp/: __init__.py  cli.py  config.py  utils.py
src/genome_lm_interp/data/: __init__.py  datasets.py  genome.py  promoter.py
src/genome_lm_interp/interpretation/: __init__.py  attributions.py  attributions_seqcls.py  pipelines.py  ranking.py
src/genome_lm_interp/models/: __init__.py  modeling_hyena.py
src/genome_lm_interp/training/: __init__.py  metrics.py  model_factory.py  pipelines.py  trainer.py
tests/: test_smoke.py
