[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-lm-interp"
version = "0.1.0"
description = "Fine-tuning and interpreting the HyenaDNA genomic language model on DNA-structure tasks (Z-DNA, G-quadruplexes, promoters)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Roman Bokhyan", email = "romanbokhyan@gmail.com" }]
keywords = [
    "genomics",
    "language-models",
    "hyenadna",
    "interpretability",
    "explainable-ai",
    "z-dna",
    "g-quadruplex",
    "promoter",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.18",
    "peft>=0.10",
    "accelerate>=0.29",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "joblib>=1.3",
    "tqdm>=4.65",
    "evaluate>=0.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Explainable-AI / attribution stack (only needed to run interpretation).
interpret = [
    "captum>=0.7",
    "transformers-interpret>=0.10",
]
# Genomic data utilities required to load the Z-DNA sparse tracks.
data = [
    "sparse_vector @ git+https://github.com/Nazar1997/Sparse_vector.git",
]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/perfectteatimer/interpreting-genomic-language-models"
"Project showcase (HSE)" = "https://cs.hse.ru/cppr/best_projects/genome_lm_interpretation"

[project.scripts]
genome-lm-train = "genome_lm_interp.cli:train_main"
genome-lm-interpret = "genome_lm_interp.cli:interpret_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
